[SRTP-414]: Add handler for activation conflict error.
